test/resources/invalid/typecheck/InvalidNetworkParameters.flo
action GET_ALL_POSTS = network(notUrl = '/posts', method = 'GET');

flow POSTS = {
    string[] posts = [];
    GET_ALL_POSTS >> posts;
}
